pushing what is completed

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,10 +9,20 @@
   <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-  <h1>
-    <div>
-
+  <div class="main.container">
+    <div class="header">
+      <h1>ZIZURZ</h1>
     </div>
-  </h1>
+    <div class="main-image">
+      <h1>Hello World</h1>
+    </div>
+    <div class="examples"></div>
+    <div class="examples"></div>
+    <div class="examples"></div>
+    <div class="examples"></div>
+    <div class="featured"></div>
+    <div class="hairstyle"></div>
+    <div class="ad"></div>
+  </div>
 </body>
 </html>
